--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dio: ^5.3.0
   json_annotation: ^4.8.1
   freezed_annotation: ^2.4.1
+  provider: ^6.0.5
   
 
 dev_dependencies:
